--- a/src/index.html
+++ b/src/index.html
@@ -1,85 +1,87 @@
 <html lang="en" ng-app="basics" ng-strict-di="true">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=11" />
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta http-equiv="X-UA-Compatible" content="IE=11" />
 
-    <!-- STYLES -->
-    <!-- build:css lib/css/main.min.css -->
-    <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../bower_components/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="../bower_components/startbootstrap-sb-admin-2/bower_components/metisMenu/dist/metisMenu.min.css">
-    <link rel="stylesheet" type="text/css" href="../bower_components/startbootstrap-sb-admin-2/dist/css/timeline.css">
-    <link rel="stylesheet" type="text/css" href="../bower_components/startbootstrap-sb-admin-2/dist/css/sb-admin-2.css">
-    <!-- endbuild -->
+        <!-- STYLES -->
+        <!-- build:css lib/css/main.min.css -->
+        <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="../bower_components/font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" type="text/css" href="../bower_components/startbootstrap-sb-admin-2/bower_components/metisMenu/dist/metisMenu.min.css">
+        <link rel="stylesheet" type="text/css" href="../bower_components/startbootstrap-sb-admin-2/dist/css/timeline.css">
+        <link rel="stylesheet" type="text/css" href="../bower_components/startbootstrap-sb-admin-2/dist/css/sb-admin-2.css">
+        <!-- endbuild -->
 
-    <!-- Custom Styles -->
-    <link rel="stylesheet" type="text/css" href="assets/css/basics.min.css">
+        <!-- Custom Styles -->
+        <link rel="stylesheet" type="text/css" href="assets/css/basics.min.css">
 
-    <!-- SCRIPTS -->
-    <!-- build:jslib lib/js/main.min.js -->
-    <script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="../bower_components/angular/angular.min.js"></script>
-    <script type="text/javascript" src="../bower_components/angular-i18n/angular-locale_fr-fr.js"></script>
-    <script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script type="text/javascript" src="../bower_components/lodash/dist/lodash.min.js"></script>
-    <script type="text/javascript" src="../bower_components/highstock-release/highstock.js"></script>
-    <script type="text/javascript" src="../bower_components/highstock-release/highcharts-more.js"></script>
-    <script type="text/javascript" src="../bower_components/highstock-release/modules/exporting.js"></script>
-    <script type="text/javascript" src="../bower_components/highstock-release/modules/drilldown.js"></script>
-    <script type="text/javascript" src="../bower_components/highcharts-ng/dist/highcharts-ng.min.js"></script>
-    <script type="text/javascript" src="../bower_components/spin.js/spin.min.js"></script>
-    <script type="text/javascript" src="../bower_components/angular-spinner/angular-spinner.min.js"></script>
-    <script type="text/javascript" src="../bower_components/angular-animate/angular-animate.min.js"></script>
-    <script type="text/javascript" src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script type="text/javascript" src="../bower_components/startbootstrap-sb-admin-2/bower_components/metisMenu/dist/metisMenu.js"></script>
-    <script type="text/javascript" src="../bower_components/startbootstrap-sb-admin-2/dist/js/sb-admin-2.js"></script>
-    <script type="text/javascript" src="../bower_components/angular-simple-logger/dist/angular-simple-logger.min.js"></script>
-    <script type="text/javascript" src="../bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
-    <!-- endbuild -->
+        <!-- SCRIPTS -->
+        <!-- build:jslib lib/js/main.min.js -->
+        <script type="text/javascript" src="../bower_components/jquery/dist/jquery.min.js"></script>
+        <script type="text/javascript" src="../bower_components/angular/angular.min.js"></script>
+        <script type="text/javascript" src="../bower_components/angular-i18n/angular-locale_fr-fr.js"></script>
+        <script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+        <script type="text/javascript" src="../bower_components/lodash/dist/lodash.min.js"></script>
+        <script type="text/javascript" src="../bower_components/highstock-release/highstock.js"></script>
+        <script type="text/javascript" src="../bower_components/highstock-release/highcharts-more.js"></script>
+        <script type="text/javascript" src="../bower_components/highstock-release/modules/exporting.js"></script>
+        <script type="text/javascript" src="../bower_components/highstock-release/modules/drilldown.js"></script>
+        <script type="text/javascript" src="../bower_components/highcharts-ng/dist/highcharts-ng.min.js"></script>
+        <script type="text/javascript" src="../bower_components/spin.js/spin.min.js"></script>
+        <script type="text/javascript" src="../bower_components/angular-spinner/angular-spinner.min.js"></script>
+        <script type="text/javascript" src="../bower_components/angular-animate/angular-animate.min.js"></script>
+        <script type="text/javascript" src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+        <script type="text/javascript" src="../bower_components/startbootstrap-sb-admin-2/bower_components/metisMenu/dist/metisMenu.js"></script>
+        <script type="text/javascript" src="../bower_components/startbootstrap-sb-admin-2/dist/js/sb-admin-2.js"></script>
+        <script type="text/javascript" src="../bower_components/angular-simple-logger/dist/angular-simple-logger.min.js"></script>
+        <script type="text/javascript" src="../bower_components/angular-google-maps/dist/angular-google-maps.min.js"></script>
+        <script type="text/javascript" src="../bower_components/libs/dichotomic.js"></script>
 
-</head>
+        <!-- endbuild -->
 
-<body ng-controller="MasterCtrl">
+    </head>
 
-    <div id="wrapper">
+    <body ng-controller="MasterCtrl">
 
-        <!-- Navigation -->
-        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <span class="navbar-brand" href="index.html">ANGULAR - CHARTS - ES</span>
-            </div>
+        <div id="wrapper">
 
-
-            <div class="navbar-default sidebar" role="navigation">
-                <div class="sidebar-nav navbar-collapse collapse" uib-collapse="navCollapsed">
-                    <ul class="nav in" id="side-menu">
-                        <li>
-                            <a ui-sref="dashboard" ui-sref-active="active"><i class="fa fa-dashboard fa-fw" aria-hidden="true"></i> CONSERVATOIRES</a>
-                        </li>
-                        <li>
-                            <a ui-sref="charts" ui-sref-active="active"><i class="fa fa-bar-chart" aria-hidden="true"></i> ANALYSE</a>
-                        </li>
-                    </ul>
+            <!-- Navigation -->
+            <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <span class="navbar-brand" href="index.html">ANGULAR - CHARTS - ES</span>
                 </div>
+
+
+                <div class="navbar-default sidebar" role="navigation">
+                    <div class="sidebar-nav navbar-collapse collapse" uib-collapse="navCollapsed">
+                        <ul class="nav in" id="side-menu">
+                            <li>
+                                <a ui-sref="dashboard" ui-sref-active="active"><i class="fa fa-table" aria-hidden="true"></i> CONSERVATORIES</a>
+                            </li>
+                            <li>
+                                <a ui-sref="charts" ui-sref-active="active"><i class="fa fa-bar-chart" aria-hidden="true"></i> ANALYSIS</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+            </nav>
+            <div id="page-wrapper">
+                <div ui-view></div>
             </div>
-
-        </nav>
-        <div id="page-wrapper">
-            <div ui-view></div>
         </div>
-    </div>
 
-    <!-- inject:js -->
-    <script src="/dist/scripts/basics.min.js"></script>
-    <!-- endinject -->
-</body>
+        <!-- inject:js -->
+        <script src="/dist/scripts/basics.min.js"></script>
+        <!-- endinject -->
+    </body>
 
 </html>
