--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
             <div uib-alert id="alert" dismiss-on-timeout="3000" ng-repeat="alert in alerts" close="closeAlert($index)" ng-bind="alert.msg"></div></div>
 
             <!-- Navigation -->
-            <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+            <nav class="navbar navbar-default navbar-static-top" role="navigation">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" ng-init="navCollapsed = true" ng-click="navCollapsed = !navCollapsed">
                         <span class="sr-only">Toggle navigation</span>
