--- a/src/index.html
+++ b/src/index.html
@@ -40,8 +40,8 @@
         <script type="text/javascript" src="../bower_components/highstock-release/modules/exporting.js"></script>
         <script type="text/javascript" src="../bower_components/highstock-release/modules/drilldown.js"></script>
         <script type="text/javascript" src="../bower_components/highcharts-ng/dist/highcharts-ng.min.js"></script>
-        <script type="text/javascript" src="../bower_components/spin.js/spin.min.js"></script>
-        <script type="text/javascript" src="../bower_components/angular-spinner/angular-spinner.min.js"></script>
+        <!--<script type="text/javascript" src="../bower_components/spin.js/spin.min.js"></script>-->
+        <script type="text/javascript" src="../bower_components/angular-spinner/dist/angular-spinner.js"></script>
         <script type="text/javascript" src="../bower_components/angular-animate/angular-animate.min.js"></script>
         <script type="text/javascript" src="../bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
         <script type="text/javascript" src="../bower_components/startbootstrap-sb-admin-2/bower_components/metisMenu/dist/metisMenu.js"></script>
