Added contact page

--- a/src/index.html
+++ b/src/index.html
@@ -82,6 +82,9 @@
                             <li>
                                 <a ui-sref="charts" ui-sref-active="active"><i class="fa fa-bar-chart" aria-hidden="true"></i> ANALYSIS</a>
                             </li>
+                            <li>
+                                <a ui-sref="contact" ui-sref-active="active"><i class="fa fa-user-plus" aria-hidden="true"></i> CONTACT</a>
+                            </li>
                         </ul>
                     </div>
                 </div>
