--- a/src/index.html
+++ b/src/index.html
@@ -30,8 +30,8 @@
         <script type="text/javascript" src="../node_modules/angular-i18n/angular-locale_fr-fr.js"></script>
         <script type="text/javascript" src="../node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
         <script type="text/javascript" src="../node_modules/lodash/lodash.min.js"></script>
-        <script type="text/javascript" src="../node_modules/chart.js/dist/Chart.min.js"></script>
-        <script type="text/javascript" src="../node_modules/angular-chart.js/dist/angular-chart.min.js"></script>
+        <script type="text/javascript" src="../node_modules/zingchart/client/zingchart.min.js"></script>
+        <script type="text/javascript" src="../node_modules/zingchart-angularjs/src/zingchart-angularjs.js"></script>
         <script type="text/javascript" src="../node_modules/angular-spinner/dist/angular-spinner.js"></script>
         <script type="text/javascript" src="../node_modules/angular-animate/angular-animate.min.js"></script>
         <script type="text/javascript" src="../node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
