Can not be deployed like this. Started new industrialisation.

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<html lang="en" ng-app="basics" ng-strict-di="true">
+<html lang="en" ng-app="conservatories" ng-strict-di="true">
 
     <head>
         <meta charset="UTF-8">
@@ -22,7 +22,7 @@
         <!-- endbuild -->
 
         <!-- Custom Styles -->
-        <link rel="stylesheet" type="text/css" href="assets/css/basics.min.css">
+        <link rel="stylesheet" type="text/css" href="assets/css/app.min.css">
 
         <!-- SCRIPTS -->
         <!-- build:jslib lib/js/main.min.js -->
@@ -82,7 +82,7 @@
         </div>
 
         <!-- inject:js -->
-        <script src="/dist/scripts/basics.min.js"></script>
+        <script src="scripts/app.min.js"></script>
         <!-- endinject -->
     </body>
 
