--- a/src/scripts/charts/charts.html
+++ b/src/scripts/charts/charts.html
@@ -1,5 +1,5 @@
 <div class="row padding-10">
     <div class="col-lg-12 col-md-12 col-xs-12">
-        <custom-drilldown></custom-drilldown>
+        <conservatory-drilldown></conservatory-drilldown>
     </div>
 </div>
