--- a/src/index.html
+++ b/src/index.html
@@ -16,32 +16,12 @@
         <meta name="application-name" content="Conservatories">
         <meta name="theme-color" content="#ffffff">
 
-        <!-- STYLES -->
-        <!-- build:css lib/css/main.min.css -->
-        <link rel="stylesheet" type="text/css" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-        <!-- endbuild -->
+        <link rel="stylesheet" type="text/css" href="bundle.css">
 
-        <!-- Custom Styles -->
-        <link rel="stylesheet" type="text/css" href="assets/css/app.min.css">
-
-        <!-- SCRIPTS -->
-        <!-- build:jslib lib/js/main.min.js -->
-        <script type="text/javascript" src="../node_modules/angular/angular.min.js"></script>
-        <script type="text/javascript" src="../node_modules/angular-i18n/angular-locale_fr-fr.js"></script>
-        <script type="text/javascript" src="../node_modules/angular-ui-bootstrap/dist/ui-bootstrap-tpls.js"></script>
-        <script type="text/javascript" src="../node_modules/lodash/lodash.min.js"></script>
-        <script type="text/javascript" src="../node_modules/zingchart/client/zingchart.min.js"></script>
-        <script type="text/javascript" src="../node_modules/zingchart-angularjs/src/zingchart-angularjs.js"></script>
-        <script type="text/javascript" src="../node_modules/angular-spinner/dist/angular-spinner.js"></script>
-        <script type="text/javascript" src="../node_modules/angular-animate/angular-animate.min.js"></script>
-        <script type="text/javascript" src="../node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
-        <script type="text/javascript" src="../node_modules/angular-simple-logger/dist/angular-simple-logger.min.js"></script>
-        <script type="text/javascript" src="../node_modules/angular-google-maps/dist/angular-google-maps.min.js"></script>
-        <!-- endbuild -->
 
     </head>
 
-    <body ng-controller="MasterCtrl">
+    <body>
 
         <div id="wrapper">
 
@@ -81,9 +61,7 @@
             </div>
         </div>
 
-        <!-- inject:js -->
-        <script src="scripts/app.min.js"></script>
-        <!-- endinject -->
+        <script src="bundle.js"></script>
     </body>
 
 </html>
