--- a/src/scripts/conservatory/conservatory-details.html
+++ b/src/scripts/conservatory/conservatory-details.html
@@ -1,16 +1,21 @@
 <div class="modal-header">
     <form id="modalForm" class="form-inline">
         <div class="pull-right">
-            <button class="btn-close" ng-click="$ctrl.close()"><i class="glyphicon glyphicon-remove-circle" aria-hidden="true"></i>
+            <button class="btn-close" ng-click="$ctrl.close()"><i
+                    class="glyphicon glyphicon-remove-circle"
+                    aria-hidden="true"></i>
             </button>
         </div>
         <h4 class="modal-title" ng-bind="$ctrl.conservatory.name"></h4>
     </form>
 </div>
 <div class="modal-body">
-    <ui-gmap-google-map class="fullwidth" center="$ctrl.map.coord" zoom="$ctrl.marker.zoom" control="myMap">
-        <ui-gmap-marker idKey="$ctrl.marker.id" coords="$ctrl.marker.coord" click="$ctrl.onMarkerClick()">
-            <ui-gmap-window show="$ctrl.showWindow" closeClick="$ctrl.closeWindow()" templateUrl="$ctrl.templateUrl"
+    <ui-gmap-google-map class="fullwidth" center="$ctrl.map.coord" zoom="$ctrl.marker.zoom"
+                        control="myMap">
+        <ui-gmap-marker idKey="$ctrl.marker.id" coords="$ctrl.marker.coord"
+                        click="$ctrl.onMarkerClick()">
+            <ui-gmap-window show="$ctrl.showWindow" closeClick="$ctrl.closeWindow()"
+                            templateUrl="$ctrl.templateUrl"
                             templateParameter="$ctrl.conservatory">
             </ui-gmap-window>
         </ui-gmap-marker>
