--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
     <meta name="application-name" content="Conservatories">
     <meta name="theme-color" content="#ffffff">
 
+    <link rel="stylesheet" type="text/css" href="bundle.css">
+
 </head>
 
 <body>
