--- a/src/scripts/conservatory/details/marker-window.html
+++ b/src/scripts/conservatory/details/marker-window.html
@@ -1,5 +1,5 @@
-<div id="mapWindow">
-    <div class="col-lg-12 col-md-12 col-xs-12 conservatory-details">
+<div class="mapWindow">
+    <div class="conservatory-details">
         <p><b ng-bind="parameter.category"></b></p>
         <p ng-bind="parameter.street"></p>
         <p ng-bind="parameter.zip + ' ' + parameter.city"></p>
