--- a/src/scripts/charts/charts.html
+++ b/src/scripts/charts/charts.html
@@ -1,5 +1,3 @@
-<div class="row padding-10">
-    <div class="col-lg-12 col-md-12 col-xs-12">
+<div class="padding-10">
         <conservatory-drilldown></conservatory-drilldown>
-    </div>
 </div>
