--- a/src/scripts/contact/contact.html
+++ b/src/scripts/contact/contact.html
@@ -1,15 +1,15 @@
-<div class="row padding-10">
-    <div class="col-lg-12 col-md-12 col-xs-12">
+<div class="padding-10">
+    <md-grid-list md-cols="12" md-row-height="fit">
         <h2>Illustrations</h2>
-        <p>Many thanks to <a href="https://www.elodiearete.fr">Elodie Arete</a></p>
+        <p>Remerciements à <a href="https://www.elodiearete.fr">Elodie Arete</a></p>
         <img class="header-img" src="../../assets/img/instruments_musique_guitare.svg">
-    </div>
-    <div class="col-lg-12 col-md-12 col-xs-12">
-        <h2>Infrastructure</h2>
-        <p>Many thanks to <a href="https://github.com/ViBiOh">Vincent Boutour</a></p>
-    </div>
-    <div class="col-lg-12 col-md-12 col-xs-12">
-        <h2>Development</h2>
+    </md-grid-list>
+    <md-grid-list md-cols="12" md-row-height="fit">
+        <h2>Infrastructure et Backend</h2>
+        <p>Remerciements à <a href="https://github.com/ViBiOh">Vincent Boutour</a></p>
+    </md-grid-list>
+    <md-grid-list md-cols="12" md-row-height="fit">
+        <h2>Développement de l'IHM</h2>
         <a href="https://github.com/eponae">Alice Rimassa</a>
-    </div>
+    </md-grid-list>
 </div>
