--- a/src/scripts/dashboard/dashboard.html
+++ b/src/scripts/dashboard/dashboard.html
@@ -1,64 +1,57 @@
-<div class="row padding-10">
-    <div class="col-lg-12 col-md-12 col-xs-12">
-        <div class="col-lg-12 col-md-12 col-xs-12">
-            <form class="col-lg-6 col-md-12 col-xs-12">
-                <div class="form-group">
-                    <input class="form-control" type="text" placeholder="Find conservatory"
-                           ng-model="$ctrl.filter"
-                           ng-change="$ctrl.changePage({
+<div class="padding-10">
+    <md-grid-list md-cols="12" md-row-height="fit">
+        <md-input-container class="width-250">
+            <input type="text" placeholder="Trouver un conservatoire"
+                   ng-model="$ctrl.filter"
+                   ng-change="$ctrl.changePage({
                            page: 1,
                            sort: $ctrl.currentCriteria,
                            order: $ctrl.orders[$ctrl.currentCriteria],
                            filter: $ctrl.filter
                            })">
+        </md-input-container>
+    </md-grid-list>
+    <md-grid-list md-cols="12" md-row-height="fit">
+        <h3 ng-if="$ctrl.totalItems === 0">No result</h3>
+        <md-list ng-if="$ctrl.totalItems > 0">
+            <md-list-item ng-repeat="conservatory in $ctrl.conservatories">
+                <div class="md-list-item-text padding-10">
+                    <div>
+                        <span ng-bind="conservatory.name"></span>
+                        <i class="material-icons clickable" aria-label="Coordonnées"
+                           ng-click="$ctrl.openDetails($event, conservatory)">location_on</i>
+                    </div>
+                    <div>
+                        <span ng-bind="conservatory.city"></span>
+                        <span ng-bind="conservatory.zip"></span>
+                    </div>
                 </div>
-            </form>
-        </div>
-        <div class="col-lg-12 col-md-12 col-xs-12">
-            <h3 ng-if="$ctrl.totalItems === 0">No result</h3>
-            <table id="table" ng-if="$ctrl.totalItems > 0"
-                   class="table table-responsive table-bordered">
-                <thead>
-                <tr>
-                    <th class="clickable" ng-click="$ctrl.sortByColumn('name')">COMPANY NAME
-                    </th>
-                    <th class="clickable" ng-click="$ctrl.sortByColumn('city')">TOWN</th>
-                    <th class="clickable" ng-click="$ctrl.sortByColumn('zip')">POSTCODE</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr ng-repeat="conservatory in $ctrl.conservatories">
-                    <td>
-                        <div ng-bind="conservatory.name"></div>
-                        <a><i
-                                class="glyphicon glyphicon-map-marker clickable"
-                                ng-click="$ctrl.openDetails(conservatory)"
-                                aria-hidden="true">
+            </md-list-item>
+        </md-list>
 
-                        </i></a>
-                    </td>
-                    <td ng-bind="conservatory.city"></td>
-                    <td ng-bind="conservatory.zip"></td>
-                </tr>
-                </tbody>
-            </table>
-            <ul uib-pagination id="custPagination" class="pagination-sm" boundary-links="true"
-                boundary-link-numbers="true" total-items="$ctrl.totalItems"
-                num-pages="$ctrl.numPages"
-                max-size="$ctrl.maxSize" ng-model="$ctrl.currentPage"
-                ng-change="$ctrl.changePage({
-                           page: $ctrl.currentPage,
-                           sort: $ctrl.currentCriteria,
-                           order: $ctrl.orders[$ctrl.currentCriteria],
-                           filter: $ctrl.filter
-                           })"
-                previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;"
-                last-text="&raquo;"
-                items-per-page="$ctrl.itemsPerPage"></ul>
-        </div>
-        <div class="col-lg-12 col-md-12 col-xs-12 center">
+        <!--<th class="clickable" ng-click="$ctrl.sortByColumn('name')">COMPANY NAME
+        </th>
+        <th class="clickable" ng-click="$ctrl.sortByColumn('city')">TOWN</th>
+        <th class="clickable" ng-click="$ctrl.sortByColumn('zip')">POSTCODE</th>-->
+
+        <!--<ul uib-pagination id="custPagination" class="pagination-sm" boundary-links="true"
+            boundary-link-numbers="true" total-items="$ctrl.totalItems"
+            num-pages="$ctrl.numPages"
+            max-size="$ctrl.maxSize" ng-model="$ctrl.currentPage"
+            ng-change="$ctrl.changePage({
+                       page: $ctrl.currentPage,
+                       sort: $ctrl.currentCriteria,
+                       order: $ctrl.orders[$ctrl.currentCriteria],
+                       filter: $ctrl.filter
+                       })"
+            previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;"
+            last-text="&raquo;"
+            items-per-page="$ctrl.itemsPerPage"></ul>-->
+    </md-grid-list>
+    <md-grid-list md-cols="12" md-row-height="fit">
+        <div>
             <img class="header-img" src="../../assets/img/instruments_musique_trompette.svg">
             <img class="header-img" src="../../assets/img/instruments_musique_piano.svg">
         </div>
-    </div>
+    </md-grid-list>
 </div>
