Worked on style

--- a/src/scripts/conservatory/details/conservatory-details.html
+++ b/src/scripts/conservatory/details/conservatory-details.html
@@ -3,7 +3,7 @@
         <div class="md-toolbar-tools">
             <h4 ng-bind="$ctrl.conservatory.name"></h4>
             <md-button ng-click="$ctrl.closeDialog()" class="md-icon-button">
-                <i class="material-icons" aria-label="Fermer">clear</i>
+                <md-icon md-font-set="material-icons" aria-label="Fermer">clear</md-icon>
             </md-button>
         </div>
     </md-toolbar>
