--- a/src/index.html
+++ b/src/index.html
@@ -22,17 +22,40 @@
 <body>
 
 <!-- Navigation -->
-<md-nav-bar md-selected-nav-item="currentNavItem" aria-label="navigationBar">
+<md-fab-toolbar class="responsive-layout-xs" md-direction="right" md-open="isOpen">
+    <md-fab-trigger class="align-with-text">
+        <md-button aria-label="Naviguer" class="md-fab md-primary">
+            <md-icon md-font-set="material-icons">reorder</md-icon>
+        </md-button>
+    </md-fab-trigger>
+
+    <md-toolbar>
+        <md-fab-actions class="md-toolbar-tools">
+            <md-button ui-sref="dashboard" aria-label="Conservatoires" class="md-icon-button">
+                <md-icon md-font-set="material-icons">list</md-icon>
+            </md-button>
+            <md-button ui-sref="charts" aria-label="Analyse" class="md-icon-button">
+                <md-icon md-font-set="material-icons">assessment</md-icon>
+            </md-button>
+            <md-button ui-sref="contact" aria-label="Contact" class="md-icon-button">
+                <md-icon md-font-set="material-icons">contacts</md-icon>
+            </md-button>
+        </md-fab-actions>
+    </md-toolbar>
+</md-fab-toolbar>
+
+<md-nav-bar class="responsive-layout-lg" layout-gt-xs md-selected-nav-item="currentNavItem" aria-label="navigationBar">
     <md-nav-item md-nav-sref="dashboard" name="dashboard" aria-label="dashboard">
         Conservatoires
     </md-nav-item>
     <md-nav-item md-nav-sref="charts" name="charts" aria-label="charts">
-       Analyse
+        Analyse
     </md-nav-item>
     <md-nav-item md-nav-sref="contact" name="contact" aria-label="contact">
         Contact
     </md-nav-item>
 </md-nav-bar>
+
 <div class="row layout-padding">
     <div ui-view></div>
 </div>
