--- a/src/scripts/conservatory/drilldown/conservatory-drilldown.html
+++ b/src/scripts/conservatory/drilldown/conservatory-drilldown.html
@@ -1,3 +1,3 @@
-<div>
-    <zingchart id="myChart" zc-json="$ctrl.chartData" zc-height="100%" zc-width="100%"></zingchart>
+<div class="resizable">
+    <div zingchart id="myChart" zc-json="$ctrl.chartData" zc-height="100%" zc-width="100%"></div>
 </div>
