--- a/src/scripts/dashboard/dashboard.html
+++ b/src/scripts/dashboard/dashboard.html
@@ -1,57 +1,57 @@
-<div class="padding-10">
-    <md-grid-list md-cols="12" md-row-height="fit">
-        <md-input-container class="width-250">
-            <input type="text" placeholder="Trouver un conservatoire"
-                   ng-model="$ctrl.filter"
-                   ng-change="$ctrl.changePage({
+<md-grid-list md-cols="12" md-row-height="fit">
+    <md-input-container class="width-250">
+        <input type="text" placeholder="Trouver un conservatoire"
+               ng-model="$ctrl.filter"
+               ng-change="$ctrl.changePage({
                            page: 1,
                            sort: $ctrl.currentCriteria,
                            order: $ctrl.orders[$ctrl.currentCriteria],
                            filter: $ctrl.filter
                            })">
-        </md-input-container>
-    </md-grid-list>
-    <md-grid-list md-cols="12" md-row-height="fit">
-        <h3 ng-if="$ctrl.totalItems === 0">No result</h3>
-        <md-list ng-if="$ctrl.totalItems > 0">
-            <md-list-item ng-repeat="conservatory in $ctrl.conservatories">
-                <div class="md-list-item-text padding-10">
-                    <div>
-                        <span ng-bind="conservatory.name"></span>
-                        <i class="material-icons clickable" aria-label="Coordonnées"
-                           ng-click="$ctrl.openDetails($event, conservatory)">location_on</i>
-                    </div>
-                    <div>
-                        <span ng-bind="conservatory.city"></span>
-                        <span ng-bind="conservatory.zip"></span>
-                    </div>
+    </md-input-container>
+</md-grid-list>
+<md-grid-list md-cols="12" md-row-height="fit">
+    <h3 ng-if="$ctrl.totalItems === 0">No result</h3>
+    <md-list ng-if="$ctrl.totalItems > 0">
+        <md-list-item ng-repeat="conservatory in $ctrl.conservatories">
+            <div class="md-list-item-text padding-10">
+                <div>
+                    <span ng-bind="conservatory.name"></span>
+                    <md-icon md-font-set="material-icons" class="clickable"
+                             aria-label="Coordonnées"
+                             ng-click="$ctrl.openDetails($event, conservatory)">location_on
+                    </md-icon>
                 </div>
-            </md-list-item>
-        </md-list>
+                <div>
+                    <span ng-bind="conservatory.city"></span>
+                    <span ng-bind="conservatory.zip"></span>
+                </div>
+            </div>
+        </md-list-item>
+    </md-list>
 
-        <!--<th class="clickable" ng-click="$ctrl.sortByColumn('name')">COMPANY NAME
-        </th>
-        <th class="clickable" ng-click="$ctrl.sortByColumn('city')">TOWN</th>
-        <th class="clickable" ng-click="$ctrl.sortByColumn('zip')">POSTCODE</th>-->
+    <!--<th class="clickable" ng-click="$ctrl.sortByColumn('name')">COMPANY NAME
+    </th>
+    <th class="clickable" ng-click="$ctrl.sortByColumn('city')">TOWN</th>
+    <th class="clickable" ng-click="$ctrl.sortByColumn('zip')">POSTCODE</th>-->
 
-        <!--<ul uib-pagination id="custPagination" class="pagination-sm" boundary-links="true"
-            boundary-link-numbers="true" total-items="$ctrl.totalItems"
-            num-pages="$ctrl.numPages"
-            max-size="$ctrl.maxSize" ng-model="$ctrl.currentPage"
-            ng-change="$ctrl.changePage({
-                       page: $ctrl.currentPage,
-                       sort: $ctrl.currentCriteria,
-                       order: $ctrl.orders[$ctrl.currentCriteria],
-                       filter: $ctrl.filter
-                       })"
-            previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;"
-            last-text="&raquo;"
-            items-per-page="$ctrl.itemsPerPage"></ul>-->
-    </md-grid-list>
-    <md-grid-list md-cols="12" md-row-height="fit">
-        <div>
-            <img class="header-img" src="../../assets/img/instruments_musique_trompette.svg">
-            <img class="header-img" src="../../assets/img/instruments_musique_piano.svg">
-        </div>
-    </md-grid-list>
-</div>
+    <!--<ul uib-pagination id="custPagination" class="pagination-sm" boundary-links="true"
+        boundary-link-numbers="true" total-items="$ctrl.totalItems"
+        num-pages="$ctrl.numPages"
+        max-size="$ctrl.maxSize" ng-model="$ctrl.currentPage"
+        ng-change="$ctrl.changePage({
+                   page: $ctrl.currentPage,
+                   sort: $ctrl.currentCriteria,
+                   order: $ctrl.orders[$ctrl.currentCriteria],
+                   filter: $ctrl.filter
+                   })"
+        previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;"
+        last-text="&raquo;"
+        items-per-page="$ctrl.itemsPerPage"></ul>-->
+</md-grid-list>
+<md-grid-list md-cols="12" md-row-height="fit">
+    <div>
+        <img class="header-img" src="../../assets/img/instruments_musique_trompette.svg">
+        <img class="header-img" src="../../assets/img/instruments_musique_piano.svg">
+    </div>
+</md-grid-list>
