Worked on removing boostrap for material

--- a/src/index.html
+++ b/src/index.html
@@ -25,21 +25,23 @@
 <md-fab-toolbar class="responsive-layout-xs" md-direction="right" md-open="isOpen">
     <md-fab-trigger class="align-with-text">
         <md-button aria-label="Naviguer" class="md-fab md-primary">
-            <md-icon md-font-set="material-icons">reorder</md-icon>
+            <md-icon md-font-set="material-icons">view_headline</md-icon>
         </md-button>
     </md-fab-trigger>
 
     <md-toolbar>
         <md-fab-actions class="md-toolbar-tools">
+
             <md-button ui-sref="dashboard" aria-label="Conservatoires" class="md-icon-button">
                 <md-icon md-font-set="material-icons">list</md-icon>
             </md-button>
             <md-button ui-sref="charts" aria-label="Analyse" class="md-icon-button">
-                <md-icon md-font-set="material-icons">assessment</md-icon>
+                <md-icon md-font-set="material-icons">equalizer</md-icon>
             </md-button>
             <md-button ui-sref="contact" aria-label="Contact" class="md-icon-button">
                 <md-icon md-font-set="material-icons">contacts</md-icon>
             </md-button>
+
         </md-fab-actions>
     </md-toolbar>
 </md-fab-toolbar>
