--- a/src/scripts/contact/contact.html
+++ b/src/scripts/contact/contact.html
@@ -1,15 +1,17 @@
 <div class="padding-10">
     <md-grid-list md-cols="12" md-row-height="fit">
-        <h2>Illustrations</h2>
-        <p>Remerciements à <a href="https://www.elodiearete.fr">Elodie Arete</a></p>
-        <img class="header-img" src="../../assets/img/instruments_musique_guitare.svg">
+        <h2 class="md-title">Illustrations</h2>
+        <div class="md-subhead">Remerciements à <a class="md-subhead"
+                href="https://www.elodiearete.fr">Elodie Arete</a></div>
+        <div><img class="header-img" src="../../assets/img/instruments_musique_guitare.svg"></div>
     </md-grid-list>
     <md-grid-list md-cols="12" md-row-height="fit">
-        <h2>Infrastructure et Backend</h2>
-        <p>Remerciements à <a href="https://github.com/ViBiOh">Vincent Boutour</a></p>
+        <h2 class="md-title">Infrastructure et Backend</h2>
+        <div class="md-subhead">Remerciements à <a class="md-subhead"
+                href="https://github.com/ViBiOh">Vincent Boutour</a></div>
     </md-grid-list>
     <md-grid-list md-cols="12" md-row-height="fit">
-        <h2>Développement de l'IHM</h2>
-        <a href="https://github.com/eponae">Alice Rimassa</a>
+        <h2 class="md-title">Développement de l'IHM</h2>
+        <a class="md-subhead" href="https://github.com/eponae">Alice Rimassa</a>
     </md-grid-list>
 </div>
