--- a/src/scripts/dashboard/dashboard.html
+++ b/src/scripts/dashboard/dashboard.html
@@ -11,24 +11,27 @@
     </md-input-container>
 </md-grid-list>
 <md-grid-list md-cols="12" md-row-height="fit">
-    <h3 ng-if="$ctrl.totalItems === 0">No result</h3>
-    <md-list ng-if="$ctrl.totalItems > 0">
-        <md-list-item ng-repeat="conservatory in $ctrl.conservatories">
-            <div class="md-list-item-text padding-10">
-                <div>
-                    <span ng-bind="conservatory.name"></span>
-                    <md-icon md-font-set="material-icons" class="clickable"
-                             aria-label="Coordonnées"
-                             ng-click="$ctrl.openDetails($event, conservatory)">location_on
+
+    <div class="md-title" ng-if="$ctrl.totalItems === 0">No result</div>
+    <md-content>
+        <md-list ng-if="$ctrl.totalItems > 0">
+            <md-list-item class="md-3-line" ng-repeat="conservatory in $ctrl.conservatories">
+                <div class="md-list-item-text">
+                    <h5 class="conservatory-name">{{conservatory.name}}</h5>
+                    <span>{{conservatory.zip}}</span>
+                    <span>{{conservatory.city}}</span>
+                </div>
+                <md-button class="md-secondary md-icon-button"
+                           ng-click="$ctrl.openDetails($event, conservatory)">
+                    <md-icon class="" md-font-set="material-icons" aria-label="Coordonnées">
+                        location_on
                     </md-icon>
-                </div>
-                <div>
-                    <span ng-bind="conservatory.city"></span>
-                    <span ng-bind="conservatory.zip"></span>
-                </div>
-            </div>
-        </md-list-item>
-    </md-list>
+                </md-button>
+
+                <md-divider ng-if="!$last"></md-divider>
+            </md-list-item>
+        </md-list>
+    </md-content>
 
     <!--<th class="clickable" ng-click="$ctrl.sortByColumn('name')">COMPANY NAME
     </th>
@@ -50,7 +53,7 @@
         items-per-page="$ctrl.itemsPerPage"></ul>-->
 </md-grid-list>
 <md-grid-list md-cols="12" md-row-height="fit">
-    <div>
+    <div class="images">
         <img class="header-img" src="../../assets/img/instruments_musique_trompette.svg">
         <img class="header-img" src="../../assets/img/instruments_musique_piano.svg">
     </div>
