--- a/src/scripts/dashboard/dashboard.html
+++ b/src/scripts/dashboard/dashboard.html
@@ -1,6 +1,6 @@
 <md-grid-list md-cols="12" md-row-height="fit">
     <md-input-container class="width-250">
-        <input type="text" placeholder="Rechercher un conservatoire"
+        <input type="text" placeholder="{{'conservatories.find' | translate | upperFirstLetter}}"
                ng-model="$ctrl.filter"
                ng-model-options='{ debounce: 500 }'
                ng-change="$ctrl.changePage({
