--- a/src/index.html
+++ b/src/index.html
@@ -21,15 +21,19 @@
 
 <body class="main-view overflow-hidden">
 
-<md-nav-bar class="responsive-layout-lg" layout-gt-xs md-selected-nav-item="currentNavItem" aria-label="navigationbar">
-    <md-nav-item md-nav-sref="dashboard" name="dashboard" aria-label="dashboard">
-        {{'conservatories' | translate}}
+<md-nav-bar class="responsive-layout-lg" layout-gt-xs md-selected-nav-item="currentNavItem"
+            aria-label="{{'navbar' | translate}}">
+    <md-nav-item md-nav-sref="dashboard" name="dashboard"
+                 aria-label="{{'conservatories.title' | translate}}" class="upper-first-letter">
+        {{'conservatories.title' | translate}}
     </md-nav-item>
-    <md-nav-item md-nav-sref="charts" name="charts" aria-label="charts">
-        Analyse
+    <md-nav-item md-nav-sref="charts" name="charts" aria-label="{{'analysis' | translate}}"
+                 class="upper-first-letter">
+        {{'analysis' | translate}}
     </md-nav-item>
-    <md-nav-item md-nav-sref="contact" name="contact" aria-label="contact">
-        Contact
+    <md-nav-item md-nav-sref="contact" name="contact" aria-label="{{'contact.title' | translate}}"
+                 class="upper-first-letter">
+        {{'contact.title' | translate}}
     </md-nav-item>
 </md-nav-bar>
 
@@ -47,13 +51,16 @@
     <md-toolbar>
         <md-fab-actions class="md-toolbar-tools">
 
-            <md-button ui-sref="dashboard" aria-label="conservatories" class="md-icon-button">
+            <md-button ui-sref="dashboard" aria-label="{{'conservatories.title' | translate}}"
+                       class="md-icon-button">
                 <md-icon md-font-set="material-icons">list</md-icon>
             </md-button>
-            <md-button ui-sref="charts" aria-label="analyse" class="md-icon-button">
+            <md-button ui-sref="charts" aria-label="{{'analysis' | translate}}"
+                       class="md-icon-button">
                 <md-icon md-font-set="material-icons">equalizer</md-icon>
             </md-button>
-            <md-button ui-sref="contact" aria-label="contact" class="md-icon-button">
+            <md-button ui-sref="contact" aria-label="{{'contact.title' | translate}}"
+                       class="md-icon-button">
                 <md-icon md-font-set="material-icons">contacts</md-icon>
             </md-button>
 
