--- a/src/scripts/conservatory/details/conservatory-details.html
+++ b/src/scripts/conservatory/details/conservatory-details.html
@@ -1,9 +1,9 @@
-<md-dialog aria-label="conservatorydetails">
+<md-dialog aria-label="{{'conservatory.detail' | translate}}">
     <md-toolbar>
         <div class="md-toolbar-tools">
             <h4 ng-bind="$ctrl.conservatory.name"></h4>
             <md-button ng-click="$ctrl.closeDialog()" class="md-icon-button">
-                <md-icon md-font-set="material-icons" aria-label="close">clear</md-icon>
+                <md-icon md-font-set="material-icons" aria-label="{{'close' | translate}}">clear</md-icon>
             </md-button>
         </div>
     </md-toolbar>
