--- a/src/scripts/dashboard/dashboard.html
+++ b/src/scripts/dashboard/dashboard.html
@@ -24,7 +24,8 @@
                 </div>
                 <md-button class="md-secondary md-icon-button"
                            ng-click="$ctrl.openDetails($event, conservatory)">
-                    <md-icon class="" md-font-set="material-icons" aria-label="coordinates">
+                    <md-icon class="" md-font-set="material-icons"
+                             aria-label="{{'coordinates' | translate}}">
                         location_on
                     </md-icon>
                 </md-button>
