--- a/src/scripts/conservatory/drilldown/conservatory-drilldown.html
+++ b/src/scripts/conservatory/drilldown/conservatory-drilldown.html
@@ -1,3 +1,4 @@
+<md-tooltip class="upper-first-letter responsive-layout-lg" md-direction="top">{{'chart.download' | translate}}</md-tooltip>
 <div class="resizable">
-    <div zingchart id="myChart" zc-json="$ctrl.chartData" zc-height="100%" zc-width="100%"></div>
+    <div zingchart id="myChart" zc-render="$ctrl.chartConfig"></div>
 </div>
