--- a/src/scripts/contact/contact.html
+++ b/src/scripts/contact/contact.html
@@ -3,17 +3,17 @@
         <h2 class="md-title upper-first-letter">{{'contact.icons' | translate}}</h2>
         <div class="md-subhead upper-first-letter">{{'contact.thanks' | translate}}
             <a class="md-subhead"
-                href="https://www.elodiearete.fr">Elodie Arete</a></div>
+               target="_blank" href="https://www.elodiearete.fr">Elodie Arete</a></div>
         <div><img class="header-img" src="../../assets/img/instruments_musique_guitare.svg"></div>
     </md-grid-list>
     <md-grid-list md-cols="12" md-row-height="fit">
         <h2 class="md-title upper-first-letter">{{'contact.backend' | translate}}</h2>
         <div class="md-subhead upper-first-letter">{{'contact.thanks' | translate}}
             <a class="md-subhead"
-                href="https://github.com/ViBiOh">Vincent Boutour</a></div>
+               target="_blank" href="https://github.com/ViBiOh">Vincent Boutour</a></div>
     </md-grid-list>
     <md-grid-list md-cols="12" md-row-height="fit">
         <h2 class="md-title upper-first-letter">{{'contact.ihm' | translate}}</h2>
-        <a class="md-subhead" href="https://github.com/eponae">Alice Rimassa</a>
+        <a class="md-subhead" target="_blank" href="https://github.com/eponae">Alice Rimassa</a>
     </md-grid-list>
 </div>
