--- a/src/scripts/dashboard/dashboard.html
+++ b/src/scripts/dashboard/dashboard.html
@@ -1,5 +1,5 @@
 <md-grid-list md-cols="12" md-row-height="fit">
-    <md-input-container class="width-250">
+    <md-input-container class="full-width">
         <input type="text" placeholder="{{'conservatories.find' | translate | upperFirstLetter}}"
                ng-model="$ctrl.filter"
                ng-model-options='{ debounce: 500 }'
